2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.07)

	* Makefile.PL: Set the distribution_type to script to see if PAUSE will index it
	
2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.06)

	* Test.php: Patch from #27487 by ANDYA, isa_ok() now handles subclasses
	* t/isa_ok.t: Test for the #27487 fix
	* README: New file, this is just pod2text Test.php | iconv -f iso-8859-1 -t utf-8

2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.05)

	* Makefile.PL: Add requires_external_bin 'php'
	* t/: Don't fail tests unless TEST_FAIL is set
	
2007-06-06 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.04)

	* Test.php: Note that new versions can be found on CPAN
	* Test.php: Coding style: func(arg) not func( arg )

2007-06-06 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.03)

	* META.yml: Forgot to bump this along with the last release
	
2007-06-06 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.02)

	* Test.php: Escape the author name so that it doesn't show up as
	            gibberish on search.cpan.org
	* Makefile.PL: New file with a 'test' target appropriate for the
	               PHP. This replaces the hand-written Makefile

2007-06-06 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.01)

	* Initial release