@@ -12,4 +12,4 @@ no_index:
   directory: 
     - inc
     - t
-version: 0.07
+version: 0.08
