@@ -1,3 +1,8 @@
+2007-06-08 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.08)
+
+	* Test.php: Large patch from ANDYA that properly implements is_deeply() reporting
+	* t/cmp-deeply.t: New file from ANDYA, test for is_deeply reporting
+	
 2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.07)
 
 	* Makefile.PL: Set the distribution_type to script to see if PAUSE will index it
